--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,11 @@
     <string name="add_routine_desc">Add Routine</string>
     <string name="ok_action">OK</string>
     <string name="set_time_action">Set Time</string>
+    <string name="task_description_label">Description (Optional)</string>
+    <string name="task_time_label">Time (Optional)</string>
+    <string name="task_days_label">Only on these days (optional):</string>
+    <string name="all_routine_days_option">All routine days</string>
+    <string name="play_sound_label">Play Sound</string>
+    <string name="select_sound_action">Select Sound</string>
+    <string name="selected_sound_label">Selected: %1$s</string>
 </resources>
